--- a/ProyectoCerveza/src/Registro/RegistroGustoxPersona.form
+++ b/ProyectoCerveza/src/Registro/RegistroGustoxPersona.form
@@ -72,6 +72,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Modificar Cantidad"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="290" y="440" width="160" height="40"/>
